[workspace]
members = [
    "boulder",
    "moss",
    "crates/*",
]
default-members = [
    "moss"
]
resolver = "2"

[workspace.package]
edition = "2021"

[workspace.dependencies]
bytes = "1.6.0"
chrono = "0.4.38"
clap = { version = "4.5.6", features = ["derive", "string"] }
criterion = { version = "0.5.1", features = ["html_reports"] }
crossterm = "0.27.0"
derive_more = "0.99.17"
dialoguer = "0.11.0"
diesel = { version = "2.2.0", features = ["sqlite","returning_clauses_for_sqlite_3_35"] }
diesel_migrations = "2.2.0"
dirs = "5.0.1"
elf = "0.7.4"
indicatif = "0.17.8"
itertools = "0.12.1"
futures = "0.3.30"
glob = "0.3.1"
hex = "0.4.3"
indextree = "4.6.1"
libsqlite3-sys = { version = "0.28.0", features = ["bundled"] }
log = "0.4.21"
nom = "7.1.3"
nix = { version = "0.27.1", features = ["user", "fs", "sched", "process", "mount", "hostname", "signal", "term"] }
petgraph = "0.6.5"
rayon = "1.10.0"
regex = "1.10.4"
reqwest = { version = "0.12.4", default-features = false, features = ["brotli", "charset", "deflate", "gzip", "http2", "rustls-tls", "stream", "zstd"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
serde_yaml = "0.9.34"
sha2 = "0.10.8"
strum = { version = "0.26.2", features = ["derive"] }
thiserror = "1.0.61"
tokio = { version = "1.38.0", features = ["full"] }
tokio-stream = { version = "0.1.15", features = ["time"] }
tokio-util = { version = "0.7.11", features = ["io"] }
url = { version = "2.5.0", features = ["serde"] }
xxhash-rust = { version = "0.8.10", features = ["xxh3"] }
zstd = { version = "0.13.1", features = [ "zstdmt" ] }

[profile.release]
lto = "thin"

[profile.packaging]
inherits = "release"
lto = true
codegen-units = 1
opt-level = 3
# allow packaging system to do it
strip = "none"
debug = true

# We want people who use the onboarding steps to get a nice compromise
# between fast compilation and fast runtime, but with checks in place
# and full backtraces. Hyperfine tests shows opt-level = 1 to be a good
# compromise between compile speed and runtime speed.
[profile.onboarding]
inherits = "dev"
opt-level = 1
lto = "thin"
debug = true
strip = "none"
